<resources>
    <string name="app_name">Reading Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beranda">Beranda</string>
    <string name="cari">Cari Buku Anda</string>
    <string name="buat">Buat</string>
    <string name="perpustakaan">Perpustakaan</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="pesan1">Rekomendasi Untuk Kamu!</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Library</string>
    <string name="tab_text_3">Notification</string>
    <string name="nama_akun">Nama Akun</string>
    <string name="full_name">Full Name</string>
    <string name="Password">Password</string>
    <string name="update">update</string>
    <string name="_5">5</string>
    <string name="daftar_bacaan">Daftar Bacaan</string>
    <string name="_0">0</string>
    <string name="daftar_tulisan">Daftar Tulisan</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="search">search</string>
    <string name="or">Or</string>
    <string name="google">Search On Schoolar</string>
    <string name="cariSearch">Cari</string>
    <string name="namaPenulis1">Rosemunk</string>
    <string name="keterangan1">Memperbaharui- Her World - Chapter 14.</string>
    <string name="keterangan2">Memperbaharui- Her World - Chapter 15.</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="account">Profile</string>
    <string name="title_activity_bottom_nav">Bottom_Nav</string>
    <string name="editCerita">Edit Cerita Lain</string>
    <string name="buatCerita">Buat Cerita Baru</string>
    <string name="Perpustakaan">Perpustakaanmu</string>
    <string name="herWorld">Her World</string>
    <string name="kita">Kita</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>