<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="HardcodedText">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/beranda" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/cariSearch" />

        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/perpustakaan" />

        <item
            android:id="@+id/nav_make"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/buat" />
    </group>
    <item android:title="Lainnya">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_baseline_account_circle_24"
                android:title="Profile" />

            <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/ic_baseline_notifications_24"
                android:title="Notifikasi" />


        </menu>
    </item>
</menu>