<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="20dp"
        android:background="#3DB0A9">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerVertical="true"
            android:paddingTop="16dp"
            android:src="@drawable/sky" />

        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/profile_image"
            android:includeFontPadding="false"
            android:text="@string/full_name"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_akun"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_toEndOf="@id/profile_image"
            android:layout_below="@id/full_name"
            android:includeFontPadding="false"
            android:layout_marginStart="10dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="-100dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            app:cardElevation="10dp"
            app:cardBackgroundColor="#246865"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_baseline_menu_book_24"
                    />

                <TextView
                    android:id="@+id/daftar_bacaan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:includeFontPadding="false"
                    android:text="@string/_5"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/ket_bacaan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/daftar_bacaan"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:includeFontPadding="false"
                    android:text="@string/daftar_bacaan"
                    android:textSize="14sp" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            app:cardElevation="10dp"
            app:cardBackgroundColor="#246865"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_baseline_create_24" />

                <TextView
                    android:id="@+id/daftar_tulisan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:includeFontPadding="false"
                    android:text="@string/_0"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/ket_tulisan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/daftar_tulisan"
                    android:layout_centerHorizontal="true"
                    android:includeFontPadding="false"
                    android:text="@string/daftar_tulisan"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:drawablePadding="8dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:textSize="12dp"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:drawablePadding="8dp"
            android:autofillHints=""
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:drawablePadding="8dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="8dp"
            android:hint="@string/e_mail"
            android:textSize="12dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:drawablePadding="8dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:drawableStart="@drawable/ic_baseline_local_phone_24"
            android:textSize="12dp"
            android:drawablePadding="8dp"
            android:autofillHints=""
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:drawablePadding="8dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:textSize="12dp"
            android:drawablePadding="8dp"
            android:autofillHints=""
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            app:cornerRadius="15sp"/>
    </LinearLayout>

</LinearLayout>